--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
-    "python.pythonPath": "C:\\Users\\Kevin\\Anaconda3\\envs\\distemper\\python.exe",
-    "python.linting.pylintArgs" : [ "--extension-pkg-whitelist=matplotlib.cm,pygame,copy" ] 
+    "python.linting.pylintEnabled": true,
+    "python.linting.enabled": true,
+    "python.pythonPath": "C:\\Users\\Kevin\\Anaconda3\\envs\\distemper\\python.exe"
 }
